apps/devops-app/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: devops-app-service

spec:
  selector:
    app: devops-app

  ports:
  - protocol: TCP
    port: 80
    targetPort: 80

  type: ClusterIP
