apps/devops-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: devops-app-ingress

  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  ingressClassName: traefik

  tls:
    - hosts:
        - xwarhamx.ru
      secretName: devops-app-tls

  rules:
    - host: xwarhamx.ru

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: devops-app-service

                port:
                  number: 80
